# axpo_challenge

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
axpo_challenge/: main.py
axpo_challenge/adapter/: asset_repository.py  measurements_repository.py  signals_repository.py
axpo_challenge/app/: main.py
axpo_challenge/domain/: asset.py  data_retriever.py  measurements.py  signal.py
tests/: test_axpo_challenge.py
