[tool.poetry]
name = "axpo_challenge"
version = "0.0.0"
description = ""
authors = ["Guillermo C. Martinez <telekosmos@ymail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.10,<=3.12.1"
pandas = "^2.2.0"
streamlit = "^1.38.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
